--- a/portfilo/portfilo.html
+++ b/portfilo/portfilo.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="suneel_edited.jpg" alt="avatar">
+                        <img src="developer.png" alt="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
